@@ -1,7 +1,7 @@
 AC_PREREQ([2.60])
 AC_CONFIG_MACRO_DIR([m4])
 
-AC_INIT([globus_common], [15.4], [http://jira.globus.org])
+AC_INIT([globus_common], [15.5], [http://jira.globus.org])
 AC_SUBST([MAJOR_VERSION], [${PACKAGE_VERSION%%.*}])
 AC_SUBST([MINOR_VERSION], [${PACKAGE_VERSION##*.}])
 AC_SUBST([AGE_VERSION], [15])
