@@ -1,3 +1,9 @@
+globus-common (15.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * initializer tweak
+
+ -- Globus Toolkit <support@globus.org>  Wed, 29 Jan 2014 20:35:50 -0500
+
 globus-common (15.4-1+gt6.@distro@) @distro@; urgency=low
 
   * Tweak initializer
